Add metadata of memo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>やんちゃハウス</title>
     <meta name="description" content="やんちゃハウス公式サイト">
+    <meta name="memo" content="github.io バージョン">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
