--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Top - やんちゃハウス</title>
     <meta name="description" content="やんちゃハウス公式サイト">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" type="text/css" href="all.css">
   </head>
   <body>
