Add appendix links

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <h2>やんちゃハウスとは</h2>
     <p>せっかく RubyKaigi で、みんなが同じ都市に滞在するんだし、合宿気分で１つの家に棲んじゃお。というコンセプトで運営している期間限定、超短期間のシェアハウスです。</p>
     <p>他の Rubyist と一緒に棲む経験、こういう機会でもないと、中々できませんね。</p>
+    <h2>関連リンク</h2>
+    <ul>
+      <li>Twitter ハッシュタグ: <a href="https://twitter.com/search?q=%23%E3%82%84%E3%82%93%E3%81%A1%E3%82%83%E3%83%8F%E3%82%A6%E3%82%B9&src=typed_query">#やんちゃハウス</a></li>
+      <li><a href="https://togetter.com/li/1153194?page=3">やんちゃハウス 2017 のツイートまとめ</a></li>
+    </ul>
     <h2>責任者</h2>
     <p><a href="https://twitter.com/yancya">yancya</a></p>
     <script>
