Next yancya house is God only knows

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>あなたは <span id="counter">0000000000</span> 人目のお客様です</p>
     <h2>開催一覧</h2>
     <p><a href="2020">やんちゃハウス 2020</a></p>
-    <p><a href="2020/hanami">やんちゃハウス 花見 2020</a> ← Next ハウス</p>
+    <p><a href="2020/hanami">やんちゃハウス 花見 2020</a></p>
     <p><a href="2019">やんちゃハウス 2019</a></p>
     <p><a href="2018">やんちゃハウス 2018</a></p>
     <p><a href="2017">やんちゃハウス 2017</a></p>
