--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>ようこそ！やんちゃハウスへ！</p>
     <p>あなたは <span id="counter">0000000000</span> 人目のお客様です</p>
     <h2>開催一覧</h2>
+    <p><a href="2022/world">やんちゃWorldハウス 2022</a></p>
     <p><a href="2022">やんちゃハウス 2022</a></p>
     <p><a href="2020">やんちゃハウス 2020</a></p>
     <p><a href="2020/hanami">やんちゃハウス 花見 2020</a></p>
