--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>あなたは <span id="counter">0000000000</span> 人目のお客様です</p>
     <h2>開催一覧</h2>
     <p><a href="2024">やんちゃハウス 2024</a></p>
-    <p><a href="2023/world">やんちゃワールドハウス 2023</a></p>
+    <p><a href="2023/world">やんちゃWorldハウス 2023</a></p>
     <p><a href="2023">やんちゃハウス 2023</a></p>
     <p class="past" hidden><a href="2022/world">やんちゃWorldハウス 2022</a></p>
     <p class="past" hidden><a href="2022">やんちゃハウス 2022</a></p>
