Add 2024/tamesare to top page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>ようこそ！やんちゃハウスへ！</p>
     <p>あなたは <span id="counter">0000000000</span> 人目のお客様です</p>
     <h2>開催一覧</h2>
+    <p><a href="2024/tamesare">やんちゃ試されハウス 2024</a></p>
     <p><a href="2024">やんちゃハウス 2024</a></p>
     <p><a href="2023/world">やんちゃWorldハウス 2023</a></p>
     <p><a href="2023">やんちゃハウス 2023</a></p>
