TopページにDiscordへのリンクを追加

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1><a href="/">やんちゃハウス</a></h1> 
     <p>ようこそ！やんちゃハウスへ！</p>
     <p>あなたは <span id="counter">0000000000</span> 人目のお客様です</p>
+    <h2>Discord</h2>
+    <p>やんちゃハウスは<a href="https://discord.yancya.house">Discordサーバー</a>で活動するサークルです。是非、まずはご参加ください。</p>
     <h2>開催一覧</h2>
     <p><a href="2026">やんちゃハウス 2026</a></p>
     <p><a href="2025/world">やんちゃWorldハウス 2025</a></p>
